Starting new file2vec projects in hope to reuse word2vec functionality.

--- a/.gitignore
+++ b/.gitignore
@@ -55,3 +55,14 @@ docs/_build/
 
 # PyBuilder
 target/
+
+data/
+docs/
+
+# Executables
+*.sh
+/word2vec/word-analogy
+/word2vec/word2vec
+/word2vec/compute-accuracy
+/word2vec/distance
+/word2vec/word2phrase
